# FlaskLogMonitor

./: .gitignore  CONTRIBUTING.md  README.md  app.py  app_utils.py  constants.py  pyproject.toml  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
templates/: index.html
tests/: base.py  test_app.py
tests/log/: syslog  tmp34evzgj3  tmpc6mlcsdl  tmphn0i0ngy
views/: log_view.py
