[tool.poetry]
name = "flasklogmonitor"
version = "0.1.0"
description = ""
authors = ["cainky <kylecain.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
requests = "^2.31.0"
flask-testing = "^0.8.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
